--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-VITE_API_BASE_URL=http://neuralbank.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com
+﻿VITE_KEYCLOAK_ISSUER_URL=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank
+VITE_KEYCLOAK_CLIENT_ID=neuralbank
+VITE_KEYCLOAK_AUTHORIZATION_ENDPOINT=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank/protocol/openid-connect/auth
+# Para desarrollo local, dejar vacÃ­o o usar http://localhost:8080/auth/callback
+# El cÃ³digo detectarÃ¡ automÃ¡ticamente el origin si estÃ¡ vacÃ­o
+VITE_KEYCLOAK_REDIRECT_URI=
+# Para producciÃ³n, usar:
+# VITE_KEYCLOAK_REDIRECT_URI=https://neuralbank.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/auth/callback
+VITE_KEYCLOAK_TOKEN_ENDPOINT=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank/protocol/openid-connect/token
