--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-VITE_API_BASE_URL=http://neuralbank.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com
+VITE_KEYCLOAK_ISSUER_URL=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank
+VITE_KEYCLOAK_CLIENT_ID=neuralbank
+VITE_KEYCLOAK_AUTHORIZATION_ENDPOINT=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank/protocol/openid-connect/auth
+VITE_KEYCLOAK_REDIRECT_URI=http://localhost:8080/auth/callback
+VITE_KEYCLOAK_TOKEN_ENDPOINT=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank/protocol/openid-connect/token
