VITE_KEYCLOAK_CLIENT_SECRET

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 ﻿VITE_KEYCLOAK_ISSUER_URL=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank
 VITE_KEYCLOAK_CLIENT_ID=neuralbank
 VITE_KEYCLOAK_AUTHORIZATION_ENDPOINT=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank/protocol/openid-connect/auth
-# Para desarrollo local, dejar vacÃ­o o usar http://localhost:8080/auth/callback
-# El cÃ³digo detectarÃ¡ automÃ¡ticamente el origin si estÃ¡ vacÃ­o
+# Para desarrollo local, dejar vacio o usar http://localhost:8080/auth/callback
+# El codigo detectara automaticamente el origin si esta vacio
 VITE_KEYCLOAK_REDIRECT_URI=
-# Para producciÃ³n, usar:
+# Para produccion, usar:
 # VITE_KEYCLOAK_REDIRECT_URI=https://neuralbank.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/auth/callback
 VITE_KEYCLOAK_TOKEN_ENDPOINT=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank/protocol/openid-connect/token
+# Client Secret (opcional): Solo necesario si el cliente esta configurado como "confidential" en Keycloak
+# Para aplicaciones publicas (SPA), dejar vacio y configurar el cliente como "public" en Keycloak
+VITE_KEYCLOAK_CLIENT_SECRET=
