--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ VITE_KEYCLOAK_REDIRECT_URI=
 # Para produccion, usar:
 # VITE_KEYCLOAK_REDIRECT_URI=https://neuralbank.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/auth/callback
 VITE_KEYCLOAK_TOKEN_ENDPOINT=https://rhbk.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com/realms/neuralbank/protocol/openid-connect/token
+# Post-logout redirect URI (opcional): Donde redirigir despues del logout
+# Si esta vacio, usara el origin actual
+VITE_KEYCLOAK_POST_LOGOUT_REDIRECT_URI=
+# Para produccion, usar:
+# VITE_KEYCLOAK_POST_LOGOUT_REDIRECT_URI=https://neuralbank.apps.cluster-lv5jx.lv5jx.sandbox2484.opentlc.com
 # Client Secret (opcional): Solo necesario si el cliente esta configurado como "confidential" en Keycloak
 # Para aplicaciones publicas (SPA), dejar vacio y configurar el cliente como "public" en Keycloak
 VITE_KEYCLOAK_CLIENT_SECRET=
+VITE_API_BASE_URL=/api
